# notes

./: .gitignore  README.md  pragmatism.txt
algebra/: laws.txt  names.txt  sets.txt
arch/: README.md  branch-instruction.md  execution.md  pipelined-execution.md  super-scaler.md
containers/docker/: acronyms.txt  commands.txt
containers/haproxy/: notes.txt  resources.txt
containers/kubernetes/: acronyms.txt  kubectl.txt  minikube.txt  notes.txt
containers/minio/: README.md
crypto/: README.md
databases/MongoDB/: README.md  client.py
databases/PostgreSQL/: README.md
forensics/: acronyms.txt  notes.txt  phases.txt
infra/aws/: README.md  gateway.md  (+1 more)
lang/: ._html  acronyms.txt  swift.md
lang/python/fastapi/: .pre-commit-config.yaml  Makefile  README.md  api.dockerfile  celery-beat-entrypoint.sh  celery-beat.dockerfile  celery-entrypoint.sh  celery.dockerfile  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
lang/python/fastapi/._github/: PULL_REQUEST_TEMPLATE.md
lang/python/fastapi/._github/workflows/: ci.yaml  publish.yaml
lang/python/fastapi/alembic/: env.py
lang/python/fastapi/app/: config.py
lang/python/fastapi/tests/: conftest.py
linux/: README.md  acronynms.txt  bash-configs.md  bash.txt  crypt.txt  drivers.txt  env.md  environment.txt  exif.md  ifupdown.txt  issues.txt  links.txt  linux.txt  log.txt  metacharacters.txt  modules.txt  packages.txt  ports.txt  printer.txt  processes.txt  root.txt  search.txt  security.txt  services.txt  signing.txt  systemd-networkd.txt  usb.txt
llm/: README.md
misc/: waves.md
ml/: README.md  aronyms.md  evolution.md  execution.md  research.md  source.md  strategy.md  trading.md
networking/: network-architectures.txt  notes.txt
paradigms/: README.md
sec/: acronyms.txt  distros.txt  kali.txt  resources.txt  social-engineering.txt  sources.txt
statistics/: README.md  experimental-design.md  functions.md  notation.md  references.md  sampling.md
(+779 files in other folders)
