[project]
name = "fastapi"
version = "0.1.0"
description = "Add your description here"
authors = [
  {name = "foo", email="foo@email.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by formatter
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flower.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["tests_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=80",
]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow",
  "integration: mark tests as integration tests",
]

[tool.coverage.run]
#branch = true
source = ["app"]
omit = [
  "*/tests/*",
  "*/migrations/*",
  "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

